Thu Apr  3 20:43:29 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main.c: keep polling the filedescriptors until the poll
   interval has elapsed or the 'extrafd' draws the attention
   (previously, anything happening on the filedescriptors, would
   trigger upsdrv_updateinfo() too, even errors)
 - drivers/dstate.[ch]: see the above
 - drivers/dstate-hal.[ch]: added sleep here, to limit the polling
   rate (previously, the driver would completely ignore the poll
   interval and would run upsdrv_updateinfo() without any delays
   in between)

Wed Apr  2 20:41:38 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: lower timeout value for communication with the
   UPS to 3 seconds and increase number of retries allowed to 10
   before complaining about stale data (also fix minor issue with
   cleanup of the driver)
 - man/netxml-ups.8: update manual page to reflect how this driver
   deals with 'pollinterval'

Tue Apr  1 20:15:44 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upscmd: be a good little client that cleans up after itself

Tue Apr  1 20:01:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: make the command list sorted (so that commands
   will be listed in alphabetic order by upscmd)

Mon Mar 31 19:53:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsc: be a good little client that cleans up after itself

Mon Mar 31 11:31:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.[ch]:
   - add read buffer (so that we can read in larger chunks, instead
     of character by character)
   - the context buffer is now statically allocated (since we always
     need it)
   - code cleanup

Fri Mar 28 20:20:08 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

- drivers/dstate.[ch]: use doubly linked list for connections to the
  driver (to speedup adding/removing connections) and code cleanup

Fri Mar 28 20:01:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
